--- a/index.html
+++ b/index.html
@@ -1,2 +1,32 @@
-<h1> some html </h1>
- 
+
+<body>
+	<div id="contentWrapper">
+		<div id="content">
+   
+   
+   <audio controls="controls" loop="loop">
+<source src="softchordsjazz2.mp3" type="audio/mp3" />
+</audio>
+
+
+
+
+
+<audio controls="controls" loop="loop">
+<source src="coachgoal.m4a" type="audio/mp3" />
+</audio>
+
+
+
+
+
+
+<audio controls="controls" loop="loop">
+<source src="blockchain_speech2.mp3" type="audio/mp3" />
+</audio>
+
+
+
+		</div>
+	</div>
+</body>
