--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <audio controls="controls" loop="loop">
-<source src="coachgoal.m4a" type="audio/mp3" />
+<source src="mini_coach_goal_speech.ogg" type="audio/mp3" />
 </audio>
 
 
@@ -22,7 +22,7 @@
 
 
 <audio controls="controls" loop="loop">
-<source src="blockchain_speech2.mp3" type="audio/mp3" />
+<source src="_mini_blockchain_speech2.ogg" type="audio/mp3" />
 </audio>
 
 
