--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
    <audio controls="controls" loop="loop">
 <source src="softchordsjazz2.mp3" type="audio/mp3" />
 </audio>
-
+   <audio controls="controls" loop="loop">
+<source src="softchordsjazz2.mp3" type="audio/mp3" />
+</audio>
+   <audio controls="controls" loop="loop">
+<source src="softchordsjazz2.mp3" type="audio/mp3" />
+</audio>
 
 
 
