--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 	<div id="contentWrapper">
 		<div id="content">
    
-   
+   	<br />
    <audio controls="controls" loop="loop">
 <source src="softchordsjazz2.mp3" type="audio/mp3" />
 </audio>
+	<br />	
    <audio controls="controls" loop="loop">
 <source src="jogging_optimal_111_147.mp3" type="audio/mp3" />
 </audio>
 
-
+	<br />
 
 
 
@@ -20,20 +21,20 @@
 </audio>
 
 
-
+	<br />
 
 
 
 <audio controls="controls" loop="loop">
-<source src="_mini_blockchain_speech2.ogg" type="audio/mp3" />
+<source src="mini_blockchain_speech2.ogg" type="audio/mp3" />
 </audio>
 
-
+	<br />
 
 		</div>
 	</div>
 	
-	
+		<br />
 	<canvas id="c"></canvas>
 <script>
   const c = document.getElementById('c');
