--- a/index.html
+++ b/index.html
@@ -217,4 +217,52 @@ let backHairPath = [{"x":764,"y":784},{"x":620,"y":789},{"x":571,"y":777},{"x":5
 let lipsPath = [{"x":740,"y":565},{"x":769,"y":521},{"x":778,"y":519},{"x":791,"y":524},{"x":803,"y":517},{"x":812,"y":517},{"x":823,"y":524},{"x":859,"y":558},{"x":858,"y":565},{"x":845,"y":579},{"x":830,"y":589},{"x":813,"y":597},{"x":780,"y":596},{"x":765,"y":590},{"x":751,"y":580},{"x":742,"y":571}];
 </script>
 	
+	<figure>435,44.. ms; 148 BPM = (111 BPM * 4 * (1/3))</figure>
+<!-- 
+<figure>100ms</figure>
+<figure>50ms</figure>
+<figure>10ms</figure>
+<figure>5ms</figure>
+<figure>2ms</figure>
+<figure>1ms</figure>
+<figure>0.001ms</figure>
+-->
+<style>
+  html, body { height:100%; user-select:none; }
+
+body, figure { display:flex; }
+figure {
+  font:2vw monospace;
+  justify-content:center;
+  align-items:center;  
+  flex:1;
+  animation:strobe 435.44ms steps(1,end) infinite;
+  transition:flex 1s;;
+}
+@keyframes strobe {
+  10% { background:lightgray; color:white; }
+}
+figure:after {
+  content:attr(class);
+}
+
+body:hover figure {
+  animation-play-state:paused;
+  background:white;
+}
+body:hover figure:hover {
+  animation-play-state:running;
+  flex:3;
+}
+/*
+figure:nth-child(2) { animation-duration:100ms; } 
+  
+figure:nth-child(3) { animation-duration:50ms; } 
+figure:nth-child(4) { animation-duration:10ms; } 
+figure:nth-child(5) { animation-duration:5ms; } 
+figure:nth-child(6) { animation-duration:2ms; } 
+figure:nth-child(7) { animation-duration:1ms; } 
+figure:nth-child(8) { animation-duration:0.001ms; } 
+  */
+</style>
 </body>
