--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </audio>
 	<br />	
    <audio controls="controls" loop="loop">
-<source src="jogging_optimal_111_147.mp3" type="audio/mp3" />
+<source src="jogging_optimal_111_147_B.mp3" type="audio/mp3" />
 </audio>
 
 	<br />
 
 			
 			   <audio controls="controls" loop="loop">
-<source src="jogging_optimal_111_147_b.mp3" type="audio/mp3" />
+<source src="piano_only.mp3" type="audio/mp3" />
+</audio>
+
+	<br />
+			
+			
+						
+			   <audio controls="controls" loop="loop">
+<source src="148_BPM_Long.mp3" type="audio/mp3" />
 </audio>
 
 	<br />
