--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </audio>
             <hr/>
             <audio controls="controls" loop="loop">
-                <source src="kick148bpmlong.mp3" type="audio/mp3"/>
+                <source src="long148bpmloop.mp3" type="audio/mp3"/>
             </audio>
             <hr/>
             <audio controls="controls" loop="loop">
