--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <body>
     <div id="contentWrapper">
         <div id="content"> 
+            <a href="testb.html">testb.html</a>
             <div> 
             <audio controls="controls" loop="loop" style="margin: auto; ">
                 <source src="softchordsjazz2.mp3" />
