--- a/blockchainjogging.html
+++ b/blockchainjogging.html
@@ -1,14 +1,17 @@
 <body>
     <div id="contentWrapper">
         <div id="content"> 
+            <div style="background-color:#909090; border-radius: 10px; height: 128px; width: 128px; ">
+                TAP
+            </div>
             <div>
                <audio controls="controls">
-                <source src="jogging_optimal_111_147_B2_2.mp3" type="audio/mp3"/>
+                <source src="jogging.mp3" type="audio/mp3"/>
             </audio>
                 <div>
             </div>
                <audio controls="controls">
-                <source src="jogging_optimal_111_147_B2_2.mp3" type="audio/mp3"/>
+                <source src="blockchain.mp3" type="audio/mp3"/>
             </audio>
             </div>
 
