--- a/blockchainjogging.html
+++ b/blockchainjogging.html
@@ -2,7 +2,7 @@
     <div id="contentWrapper">
         <div id="content"> 
             <div style="background-color:#909090; border-radius: 10px; height: 128px; width: 128px; ">
-                <div style="margin: auto; color: #FFFFFF; font-family: trebuchet; ">TAP</div>
+                <div style="margin: auto; color: #FFFFFF; font-family: trebuchet; align: center; ">TAP</div>
             </div>
             <div>
                <audio controls="controls">
