--- a/blockchainjogging.html
+++ b/blockchainjogging.html
@@ -16,12 +16,12 @@
             
             <div>
                <audio controls="controls" loop="loop">
-                <source src="yogajoggercomaloop.mp3" type="audio/mp3"/>
+                <source src="https://essingen123.github.io/yogajoggercomaloopb.mp3" type="audio/mp3"/>
             </audio>
                 <div>
             </div>
                <audio controls="controls">
-                <source src="blockchainspeecha.mp3" type="audio/mp3"/>
+                <source src="https://essingen123.github.io/blockchainspeecha.mp3" type="audio/mp3"/>
             </audio>
             </div>
 
