--- a/blockchainjogging2.html
+++ b/blockchainjogging2.html
@@ -1,6 +1,8 @@
 <head>
+  
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  
 </head>
 <body>
     <div id="contentWrapper">
@@ -16,12 +18,12 @@
             
             <div>
                <audio controls="controls" loop="loop">
-                <source src="https://essingen123.github.io/yogajoggercomaloopb.mp3" type="audio/mp3"/>
+                <source src="https://essingen123.github.io/fantastic-dollop/yogajoggercomaloopb.mp3" type="audio/mp3"/>
             </audio>
                 <div>
             </div>
                <audio controls="controls">
-                <source src="https://essingen123.github.io/blockchainspeecha.mp3" type="audio/mp3"/>
+                <source src="https://essingen123.github.io/fantastic-dollop/blockchainspeecha.mp3" type="audio/mp3"/>
             </audio>
             </div>
 
@@ -64,3 +66,4 @@ ReactDOM.render(
   
 </script>
 </body>
+
