Update and rename blockchainjogging3.html to blockchainjogging4.html

--- a/blockchainjogging4.html
+++ b/blockchainjogging4.html
@@ -3,7 +3,7 @@
   <script src="http://fb.me/JSXTransformer-0.13.0-rc1.js"></script>
   <script src="app.jsx" type="text/jsx;harmony=true"></script>
 
-
+<div onClick="onClick();">
 <div id="app-container"></div>
 
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -67,3 +67,73 @@ React.render(
     document.getElementById('app-container')
 );
 </script>
+
+
+
+
+ <script type="text/javascript">
+    var clicks = 0;
+    function onClick() {
+        clicks += 1;
+        document.getElementById("clicks").innerHTML = clicks;
+    };
+    </script>
+
+    <p>Clicks: <a id="clicks">0</a></p>
+ 
+<br />
+<br />
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+<br />
+
+
+</div>
