Update and rename test5.html to test6.html

--- a/test6.html
+++ b/test6.html
@@ -27,6 +27,11 @@
                <audio controls="controls">
                 <source src="https://essingen123.github.io/fantastic-dollop/blockchainspeecha.mp3" type="audio/mp3"/>
             </audio>
+              
+                           <audio controls="controls">
+                <source src="https://essingen123.github.io/fantastic-dollop/blockchainspeechb.mp3" type="audio/mp3"/>
+            </audio>
+              
             </div>
 
         </div>
