--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mix.js</title>
+  <title>maxkilian mixer tool draft</title>
   <meta name="description" content="Multitrack mixing in JavaScript with the Web Audio API">
     <link rel="stylesheet" href="css/Mix.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, 
@@ -23,7 +23,7 @@ html {
 <body>
 
   <header>
-    <h1>Mixer tool</h1>
+    <h1>maxkilian mixer tool draft</h1>
   </header>
 
   <div id="loader">
