--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -1,4 +1,8 @@
-    <link rel="stylesheet" href="css/Mix.css">
+<meta name="viewport" content="user-scalable=no">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+<link rel="stylesheet" href="css/Mix.css">
 <style>
 html {
     -webkit-text-size-adjust: none
