--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -1,6 +1,10 @@
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, 
+minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="user-scalable=no">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 
 <link rel="stylesheet" href="css/Mix.css">
 <style>
