--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -814,7 +814,7 @@ canvas {
 
 
   <header>
-    <h1>maxkilian mixer tool draft</h1>
+    <h1>maxkilian mixer tool draft 2</h1>
   </header>
 
   <div id="loader">
