--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -1,4 +1,3 @@
-<meta name="viewport" content="user-scalable=no">
 <style>
 
 article,
@@ -809,7 +808,18 @@ canvas {
 .label {
    text-align: right !important;
 }
+    html, body {
+  overflow:hidden;
+}
 </style>
+<script>
+    $(window).bind(
+  'touchmove',
+   function(e) {
+    e.preventDefault();
+  }
+);
+</script>
    <!-- <link href='http:fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'> -->
 
 
