--- a/mixjs4/index.html
+++ b/mixjs4/index.html
@@ -398,10 +398,10 @@ table {
 }
 @font-face{
   font-family: 'digital-7';
-  src: url("../fonts/digital-7.eot?#iefix") format('embedded-opentype')
-  ,url("../fonts/digital-7.woff") format('woff')
-  ,url("../fonts/digital-7.ttf") format('truetype'),
-  url("../fonts/digital-7.eot#svgFontName") format('svg');
+  src: url("fonts/digital-7.eot?#iefix") format('embedded-opentype')
+  ,url("fonts/digital-7.woff") format('woff')
+  ,url("fonts/digital-7.ttf") format('truetype'),
+  url("fonts/digital-7.eot#svgFontName") format('svg');
   font-weight: normal;
   font-style: normal
 }
@@ -447,7 +447,7 @@ a {
   width: 200px;
   height: 200px;
   position: relative;
-  background: url(../img/vu.png) top left no-repeat;
+  background: url(img/vu.png) top left no-repeat;
 }
 
 .vu:nth-child(1){
@@ -465,7 +465,7 @@ a {
 }
 
 .needle {
-  background: url(../img/needle.png) top left no-repeat;
+  background: url(img/needle.png) top left no-repeat;
   width: 48px;
   height: 51px;
   position: absolute;
@@ -690,9 +690,9 @@ canvas {
   display: inline-block;
   margin-left: 16px;
   padding: 9px 14px;
-  background: url("../img/single_rewind@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/single_rewind@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/single_rewind@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/single_rewind@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/single_rewind@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/single_rewind@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
   background-position: center center;
   background-repeat: no-repeat;
   -webkit-background-size: 6px 9px,100%;
@@ -707,9 +707,9 @@ canvas {
   display: inline-block;
   margin-left: 6px;
   padding: 9px 14px;
-  background: url("../img/rewind@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/rewind@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/rewind@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/rewind@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/rewind@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/rewind@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
   -webkit-background-size: 12px 9px,100%;
      -moz-background-size: 12px 9px,100%;
           background-size: 12px 9px,100%;
@@ -726,9 +726,9 @@ canvas {
   margin-left: 6px;
   padding: 18px;
   top: 8px;
-  background: url("../img/pause@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/pause@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/pause@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/pause@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/pause@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/pause@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
   -webkit-background-size: 14px 17px,100%;
      -moz-background-size: 14px 17px,100%;
           background-size: 14px 17px,100%;
@@ -740,9 +740,9 @@ canvas {
 }
 
 .play.paused {
-  background: url("../img/play@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/play@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/play@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/play@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/play@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/play@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
   background-position: 58% 50%;
   background-repeat: no-repeat;
   -webkit-background-size: 14px 17px,100%;
@@ -754,9 +754,9 @@ canvas {
   display: inline-block;
   margin-left: 6px;
   padding: 9px 14px;
-  background: url("../img/forward@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/forward@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
-  background: url("../img/forward@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/forward@2x.png"), -webkit-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/forward@2x.png"),    -moz-linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
+  background: url("img/forward@2x.png"),         linear-gradient(top,hsl(228, 13%, 92%) 0%,hsl(240, 100%, 100%) 100%);
   -webkit-background-size: 12px 9px,100%;
      -moz-background-size: 12px 9px,100%;
           background-size: 12px 9px,100%;
@@ -824,7 +824,7 @@ canvas {
 
 
   <header>
-    <h1>maxkilian mixer tool draft v0.00000003</h1>
+    <h1>maxkilian mixer tool draft v0.00000004</h1>
   </header>
 
   <div id="loader">
